7.1_zusatz/frontend/k8s/quotesweb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fronten-route
    sandbox: learn-kubernetes
    learn-kubernetes: fronten-route
  name: fronten-route
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: fronten-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
